[package]
name = "zoldem-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"